--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo иммунитет яштокролик энтониуильям celery силасокасельдерея">
-    <meta name="keywords" content="anishapo иммунитет яштокролик энтониуильям celery силасокасельдерея" />
+    <meta name="description" content="anishapo иммунитет mm рецепты энтониуильям healingfood">
+    <meta name="keywords" content="anishapo иммунитет mm рецепты энтониуильям healingfood" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo иммунитет яштокролик энтониуильям celery силасокасельдерея" />
+    <meta property="og:description" content="anishapo иммунитет mm рецепты энтониуильям healingfood" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=yDSoXwxrHw0AX9h_R6K&oh=2123bc87747a9c314fbc524a051fb322&oe=5EA48BAA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=My8URcWCTw0AX_Dz0r5&oh=a3d1b3fe8c576f4a5cf74a606b973aee&oe=5EA48BAA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -100,26 +100,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="яштокролик">
-									<a href="./tags/./yashtokrolik.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/yashtokrolik.png);"></div>
-										<div class="stories__slide-txt" style="">яштокролик</div>
+								<div class="stories__slide" title="mm рецепты">
+									<a href="./tags/./mm-retsepty.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/mm-retsepty.png);"></div>
+										<div class="stories__slide-txt" style="">mm рецепты</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo celery">
-									<a href="./tags/./anishapo-celery.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-celery.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo celery</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="силасокасельдерея">
-									<a href="./tags/./silasokasel-dereya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/silasokasel-dereya.png);"></div>
-										<div class="stories__slide-txt" style="">силасокасельдерея</div>
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
 									</a>
 								</div>
 							</div>
@@ -159,9 +151,9 @@
 								<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1359</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1362</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FFwmjOpXXpQAX9avwqo&oh=6d8f89c0673463fefa90a5c91ae3c895&oe=5EA4C10C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=piOEFN8PqbcAX_vEuqa&oh=97c40f0e2f657559e2d50e6ffb54f277&oe=5EA4C10C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 									</div>
 									<div class="article-more__item-name" style="
 ">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
@@ -169,9 +161,9 @@
 								<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1323</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1328</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=b6pmDEpnVMcAX-Nr0nZ&oh=877499319c1a5c9379cf2e868e36671c&oe=5EA481FD" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=UPr66lV2lioAX-IoWlJ&oh=dcb37a26d389d2d1964dd5c0f41969f8&oe=5EA481FD" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 									</div>
 									<div class="article-more__item-name" style="
 ">ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных</div>
@@ -179,9 +171,9 @@
 								<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1187</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1188</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=da6Uizo779QAX-949-J&oh=1c2725b0c3a27b32bf4c378c8b620158&oe=5EA24F4E" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=zHtSMlw6wuEAX8qEIUF&oh=f2fd545825ba50b8f69f203234878ee2&oe=5EA643CE" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 									</div>
 									<div class="article-more__item-name" style="
 ">ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ</div>
@@ -189,9 +181,9 @@
 								<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1142</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1148</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8rxNUsMzhKgAX-Av208&oh=02f114104115b522e33e00260954c5a4&oe=5EA1671C" alt="Овощные бульоны - это концентрат">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=F8CR5zxEMBMAX-aUPw2&oh=27ee18b5a07b7730fe7180e3ab24db30&oe=5EA55B9C" alt="Овощные бульоны - это концентрат">
 									</div>
 									<div class="article-more__item-name" style="
 ">Овощные бульоны - это концентрат</div>
@@ -199,9 +191,9 @@
 								<a href="./posts/./sirop-iz-yagod-buziny.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>998</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1001</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=GkNanxqYuk0AX9ga9zW&oh=1fb48276f8db1337ea61279de8d4ed78&oe=5EA386E6" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=GkNanxqYuk0AX9dqQJx&oh=05f611ff00ede69a68bd7e793dafab2e&oe=5EA386E6" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 									</div>
 									<div class="article-more__item-name" style="
 ">СИРОП ИЗ ЯГОД БУЗИНЫ</div>
@@ -209,32 +201,32 @@
 								<a href="./posts/./gidrastis-xgoldensealx-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>997</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1000</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=6yKuGvKsD98AX_DyZlU&oh=a59e1ab1948e4bfb1a92c4f6c5ede2a7&oe=5EA2849A" alt="ГИДРАСТИС (Goldenseal) 🌱">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=6yKuGvKsD98AX88T-kO&oh=61588984dd1fa22c188ee9d20d44c4c6&oe=5EA6791A" alt="ГИДРАСТИС (Goldenseal) 🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">ГИДРАСТИС (Goldenseal) 🌱</div>
 								</a>
-								<a href="./posts/./shpinatxxx.html" class="article-more__item">
+								<a href="./posts/./list-korovyaka-xmullein-leaf.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>972</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>873</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=gcwoSXNwUasAX_Hsb0v&oh=bc8e71bf0fc6e6c5cead5e44ff34cdeb&oe=5EA4838A" alt="ШПИНАТ 🌱">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=gVs-csxNJGcAX_M1Ed4&oh=d7703d8b701a1c81b6be1b2ccbeb4c3c&oe=5EA441CF" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 									</div>
 									<div class="article-more__item-name" style="
-">ШПИНАТ 🌱</div>
+">ЛИСТ КОРОВЯКА (Mullein leaf)</div>
 								</a>
-								<a href="./posts/./luchshie-produkty-dlya-ukrepleniya.html" class="article-more__item">
+								<a href="./posts/./kardamon-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>875</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>825</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=F8zGaRF5SgEAX-h27-U&oh=09d30807bc7449cfe0efc9b65d48ef2d&oe=5EA1532C" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=TSczRxdOqe0AX_WWDmf&oh=10ae4bd8122f0b1a5e7bb6fe8f902058&oe=5EA3A680" alt="КАРДАМОН ☀️">
 									</div>
 									<div class="article-more__item-name" style="
-">ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ</div>
+">КАРДАМОН ☀️</div>
 								</a>
 							</div>
 						</div>
