--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=My8URcWCTw0AX_Dz0r5&oh=a3d1b3fe8c576f4a5cf74a606b973aee&oe=5EA48BAA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=My8URcWCTw0AX_Dz0r5&oh=77dd306dd23de72ff9eb92d34814fe23&oe=5EA8802A" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -86,20 +86,11 @@
 							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1365</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1367</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=piOEFN8PqbcAX_vEuqa&oh=97c40f0e2f657559e2d50e6ffb54f277&oe=5EA4C10C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=piOEFN8PqbcAX_vEuqa&oh=55b08e26fefe840ca43974001ad5879b&oe=5EA8B58C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 							</div>
 							<div class="article-more__item-name">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
-						</a>
-							<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1328</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=UPr66lV2lioAX-IoWlJ&oh=dcb37a26d389d2d1964dd5c0f41969f8&oe=5EA481FD" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
-							</div>
-							<div class="article-more__item-name">ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных</div>
 						</a>
 							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
@@ -124,7 +115,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1002</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=6yKuGvKsD98AX88T-kO&oh=61588984dd1fa22c188ee9d20d44c4c6&oe=5EA6791A" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lYj7stutdYkAX9EcZtb&oh=6d9026e622ca674f69e9d3d553457275&oe=5EA6791A" alt="ГИДРАСТИС (Goldenseal) 🌱">
 							</div>
 							<div class="article-more__item-name">ГИДРАСТИС (Goldenseal) 🌱</div>
 						</a>
@@ -133,25 +124,34 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1001</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=GkNanxqYuk0AX9dqQJx&oh=05f611ff00ede69a68bd7e793dafab2e&oe=5EA386E6" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=nQsscBjKoBUAX9Jo-IW&oh=c28fd998ddc45e8c54e861ad197927a2&oe=5EA77B66" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 							</div>
 							<div class="article-more__item-name">СИРОП ИЗ ЯГОД БУЗИНЫ</div>
+						</a>
+							<a href="./posts/./bestsennyy-tsink-xxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>952</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=SrUtlEq7JIAAX-tEpct&oh=649f2f2052a1390950db576210e067bc&oe=5EA864BA" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+							</div>
+							<div class="article-more__item-name">БЕСЦЕННЫЙ ЦИНК 💔💜</div>
 						</a>
 							<a href="./posts/./list-korovyaka-xmullein-leaf.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>873</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=a2zA7VHhOFIAX_WMnY4&oh=f5142fac5872d8d9afb9c03859631072&oe=5EA441CF" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=a2zA7VHhOFIAX_WMnY4&oh=40a5147e2030b54b6195940e59fc83d2&oe=5EA8364F" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 							</div>
 							<div class="article-more__item-name">ЛИСТ КОРОВЯКА (Mullein leaf)</div>
 						</a>
 							<a href="./posts/./kardamon-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>842</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>857</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=TSczRxdOqe0AX_WWDmf&oh=10ae4bd8122f0b1a5e7bb6fe8f902058&oe=5EA3A680" alt="КАРДАМОН ☀️">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2iHylFnUwPEAX-Ysq1j&oh=29876cf9200b29e3c7be66a4693420d0&oe=5EA79B00" alt="КАРДАМОН ☀️">
 							</div>
 							<div class="article-more__item-name">КАРДАМОН ☀️</div>
 						</a>
